--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       - checkout
       - run: echo 'export PYTHONPATH="${PYTHONPATH}:"{HOME}:/testing_pytest_circleci_0'
       - run: python -c "import sys; print(sys.path)"
+      - run: python -m pip install -r requirements.txt
       - run: pytest --version
       - run: python code/main.py
 
