--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,34 @@
 version: 2.1
 
 jobs:
-  contruccion:
+  contruccion: ## fdgdf
     working_directory: ~/circleci-python
     docker:
       - image: "circleci/python:3.8"
     steps:
       - checkout
-      - run: echo 'export PYTHONPATH="${PYTHONPATH}:"{HOME}:/testing_pytest_circleci_0'
+      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"'
       - run: python -c "import sys; print(sys.path)"
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
       - run: pytest --version
       - run: python code/main.py
 
+  testing:
+    working_directory: ~circleci-python
+    docker:
+      - image: "circleci/python:3.8"
+    steps:
+      - checkout
+      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"'
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements.txt
+      - run: pytest -vvv test/test_main.py
 
 workflows:
-  construir_1:
+  construccion_testing:
     jobs:
       - contruccion
+      - testing:
+          requires:
+            - construccion
