--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - image: "circleci/python:3.8"
     steps:
       - checkout
-      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"'
+      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"' >> $BASH_ENV
       - run: python -c "import sys; print(sys.path)"
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
@@ -15,12 +15,12 @@ jobs:
       - run: python code/main.py
 
   testing:
-    working_directory: ~circleci-python
+    working_directory: ~/circleci-python
     docker:
       - image: "circleci/python:3.8"
     steps:
       - checkout
-      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"'
+      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"' >> $BASH_ENV
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
       - run: pytest -vvv test/test_main.py
