--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 jobs:
-  construccion: ## fdgdf
+  construccion_38: ## fdgdf
     working_directory: ~/circleci-python
     docker:
       - image: "circleci/python:3.8"
@@ -14,7 +14,7 @@ jobs:
       - run: pytest --version
       - run: python code/main.py
 
-  testing:
+  testing_38:
     working_directory: ~/circleci-python
     docker:
       - image: "circleci/python:3.8"
@@ -25,10 +25,41 @@ jobs:
       - run: python -m pip install -r requirements.txt
       - run: pytest -vvv test/test_main.py
 
+  construccion_39: ## fdgdf
+    working_directory: ~/circleci-python
+    docker:
+      - image: "circleci/python:3.9"
+    steps:
+      - checkout
+      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"' >> $BASH_ENV
+      - run: python -c "import sys; print(sys.path)"
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements.txt
+      - run: pytest --version
+      - run: python code/main.py
+
+  testing_39:
+    working_directory: ~/circleci-python
+    docker:
+      - image: "circleci/python:3.9"
+    steps:
+      - checkout
+      - run: echo 'export PYTHONPATH="${PYTHONPATH}:{HOME}:/testing_pytest_circleci_0"' >> $BASH_ENV
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements.txt
+      - run: pytest -vvv test/test_main.py
+
 workflows:
-  construccion_testing:
+  construccion_testing_38:
     jobs:
-      - construccion
-      - testing:
+      - construccion_38
+      - testing_38:
           requires:
-            - construccion
+            - construccion_38
+
+  construccion_testing_39:
+    jobs:
+      - construccion_39
+      - testing_39:
+          requires:
+            - construccion_39
