--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ bs4==0.0.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
+codecov==2.1.12
 comm==0.1.2
 contourpy==1.0.7
+coverage==7.2.1
 cryptography==39.0.1
 cycler==0.11.0
 debugpy==1.6.4
@@ -86,6 +88,7 @@ Pygments==2.13.0
 pyparsing==3.0.9
 pyrsistent==0.19.2
 pytest==7.2.1
+pytest-cov==4.0.0
 python-dateutil==2.8.2
 python-json-logger==2.0.4
 pytz==2022.7
