--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements.txt
       - run: pytest -vvv --cov test
-      - codecov/upload:
+      - codecov/upload
 
   construccion_39: ## fdgdf
     working_directory: ~/circleci-python
